@@ -2,6 +2,9 @@
 
 Every release contains many small fixes.
 
+=== next
+* SmallCodeListFormElement: comma separated code list in a row
+
 === 1.21.0.0
 * Json Frontend: real context menu (instead actions on the right)
 * Upgrade dialog-polyfill: should fix ie
